[gd_scene load_steps=7 format=4 uid="uid://b5f6v431hkhik"]

[ext_resource type="Script" uid="uid://cfvf6f48oieqy" path="res://game.gd" id="1_j5wjh"]
[ext_resource type="PackedScene" uid="uid://b70kgle12qbtf" path="res://user_interface.tscn" id="2_7jktm"]
[ext_resource type="TileSet" uid="uid://8et0wkid5sxn" path="res://art/tileset.tres" id="3_hve3p"]

[sub_resource type="Curve2D" id="Curve2D_feb5d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1273.6318, 80, 0, 0, 0, 0, 971.1443, 80, 0, 0, 0, 0, 971.1443, 304, 0, 0, 0, 0, 493.53232, 304, 0, 0, 0, 0, 493.53232, 432, 0, 0, 0, 0, 111.44279, 432, 0, 0, 0, 0, 111.44279, 304, 0, 0, 0, 0, 63.68159, 304)
}
point_count = 8

[sub_resource type="Curve2D" id="Curve2D_fc0e3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1280, 304, 0, 0, 0, 0, 976, 304, 0, 0, 0, 0, 496, 304, 0, 0, 0, 0, 496, 432, 0, 0, 0, 0, 112, 432, 0, 0, 0, 0, 112, 304, 0, 0, 0, 0, 64, 304)
}
point_count = 7

[sub_resource type="Curve2D" id="Curve2D_7jktm"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1280, 528, 0, 0, 0, 0, 976, 528, 0, 0, 0, 0, 976, 304, 0, 0, 0, 0, 496, 304, 0, 0, 0, 0, 496, 432, 0, 0, 0, 0, 112, 432, 0, 0, 0, 0, 112, 304, 0, 0, 0, 0, 64, 304)
}
point_count = 8

[node name="Game" type="Node"]
script = ExtResource("1_j5wjh")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="UserInterface" parent="." instance=ExtResource("2_7jktm")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAIAAAAIAAAAAAAAAAMAAAAIAAAAAAAAAAQAAAAIAAAAAAAAAAUAAAAIAAAAAAAAAAYAAAAIAAAAAAAAAAcAAAAIAAAAAAAAAAgAAAAIAAAAAAAAAAkAAAAIAAAAAAAAAAoAAAAIAAAAAAAAAAsAAAAIAAAAAAAAAAwAAAAIAAAAAAAAAA0AAAAIAAAAAAAAAA4AAAAIAAAAAAAAAA8AAAAIAAAAAAAAABAAAAAIAAAAAAABAAIAAAAIAAAAAAABAAMAAAAIAAAAAAABAAQAAAAIAAAAAAABAAUAAAAIAAAAAAABAAYAAAAIAAAAAAABAAcAAAAIAAAAAAABAAgAAAAIAAAAAAABAAkAAAAHAAAAAAABAAoAAAAIAAAAAAABAAsAAAAIAAAAAAABAAwAAAAIAAAAAAABAA0AAAAIAAAAAAABAA4AAAAIAAAAAAABAA8AAAAIAAAAAAABABAAAAAIAAAAAAACAAIAAAAIAAAAAAACAAMAAAAIAAAAAAACAAQAAAAIAAAAAAACAAUAAAAIAAAAAAACAAYAAAAIAAAAAAACAAcAAAAIAAAAAAACAAgAAAAIAAAAAAACAAkAAAAFAAAAAAACAAoAAAAIAAAAAAACAAsAAAAIAAAAAAACAAwAAAAIAAAAAAACAA0AAAAIAAAAAAACAA4AAAAIAAAAAAACAA8AAAAIAAAAAAACABAAAAAIAAAAAAADAAIAAAAIAAAAAAADAAMAAAAIAAAAAAADAAQAAAAIAAAAAAADAAUAAAAIAAAAAAADAAYAAAAIAAAAAAADAAcAAAAIAAAAAAADAAgAAAAIAAAAAAADAAkAAAADAAAAAAADAAoAAAAGAAAAAAADAAsAAAAGAAAAAAADAAwAAAAGAAAAAAADAA0AAAABAAAAAAADAA4AAAAIAAAAAAADAA8AAAAIAAAAAAADABAAAAAIAAAAAAAEAAIAAAAIAAAAAAAEAAMAAAAIAAAAAAAEAAQAAAAIAAAAAAAEAAUAAAAIAAAAAAAEAAYAAAAIAAAAAAAEAAcAAAAIAAAAAAAEAAgAAAAIAAAAAAAEAAkAAAAIAAAAAAAEAAoAAAAIAAAAAAAEAAsAAAAIAAAAAAAEAAwAAAAIAAAAAAAEAA0AAAAFAAAAAAAEAA4AAAAIAAAAAAAEAA8AAAAIAAAAAAAEABAAAAAIAAAAAAAFAAIAAAAIAAAAAAAFAAMAAAAIAAAAAAAFAAQAAAAIAAAAAAAFAAUAAAAIAAAAAAAFAAYAAAAIAAAAAAAFAAcAAAAIAAAAAAAFAAgAAAAIAAAAAAAFAAkAAAAIAAAAAAAFAAoAAAAIAAAAAAAFAAsAAAAIAAAAAAAFAAwAAAARAAAAAAAFAA0AAAAFAAAAAAAFAA4AAAAIAAAAAAAFAA8AAAAIAAAAAAAFABAAAAAIAAAAAAAGAAIAAAAIAAAAAAAGAAMAAAAIAAAAAAAGAAQAAAAIAAAAAAAGAAUAAAAIAAAAAAAGAAYAAAAIAAAAAAAGAAcAAAAIAAAAAAAGAAgAAAAIAAAAAAAGAAkAAAAIAAAAAAAGAAoAAAASAAAAAAAGAAsAAAAOAAAAAAAGAAwAAAALAAAAAAAGAA0AAAAFAAAAAAAGAA4AAAAIAAAAAAAGAA8AAAAIAAAAAAAGABAAAAAIAAAAAAAHAAIAAAAIAAAAAAAHAAMAAAAIAAAAAAAHAAQAAAAIAAAAAAAHAAUAAAAIAAAAAAAHAAYAAAAIAAAAAAAHAAcAAAAIAAAAAAAHAAgAAAARAAAAAAAHAAkAAAAOAAAAAAAHAAoAAAALAAAAAAAHAAsAAAANAAAAAAAHAAwAAAANAAAAAAAHAA0AAAAFAAAAAAAHAA4AAAAIAAAAAAAHAA8AAAAIAAAAAAAHABAAAAAIAAAAAAAIAAIAAAAIAAAAAAAIAAMAAAAIAAAAAAAIAAQAAAAIAAAAAAAIAAUAAAAIAAAAAAAIAAYAAAAIAAAAAAAIAAcAAAAJAAAAAAAIAAgAAAANAAAAAAAIAAkAAAANAAAAAAAIAAoAAAANAAAAAAAIAAsAAAANAAAAAAAIAAwAAAANAAAAAAAIAA0AAAAFAAAAAAAIAA4AAAAIAAAAAAAIAA8AAAAIAAAAAAAIABAAAAAIAAAAAAAJAAIAAAAIAAAAAAAJAAMAAAAIAAAAAAAJAAQAAAAIAAAAAAAJAAUAAAAIAAAAAAAJAAYAAAAIAAAAAAAJAAcAAAAIAAAAAAAJAAgAAAAQAAAAAAAJAAkAAAAPAAAAAAAJAAoAAAAMAAAAAAAJAAsAAAANAAAAAAAJAAwAAAANAAAAAAAJAA0AAAAFAAAAAAAJAA4AAAAIAAAAAAAJAA8AAAAIAAAAAAAJABAAAAAIAAAAAAAKAAIAAAAIAAAAAAAKAAMAAAAIAAAAAAAKAAQAAAAIAAAAAAAKAAUAAAAIAAAAAAAKAAYAAAAIAAAAAAAKAAcAAAAIAAAAAAAKAAgAAAAIAAAAAAAKAAkAAAAIAAAAAAAKAAoAAAAQAAAAAAAKAAsAAAAPAAAAAAAKAAwAAAAMAAAAAAAKAA0AAAAFAAAAAAAKAA4AAAAIAAAAAAAKAA8AAAAIAAAAAAAKABAAAAAIAAAAAAALAAIAAAAIAAAAAAALAAMAAAAIAAAAAAALAAQAAAAIAAAAAAALAAUAAAAIAAAAAAALAAYAAAAIAAAAAAALAAcAAAAIAAAAAAALAAgAAAAIAAAAAAALAAkAAAAIAAAAAAALAAoAAAAIAAAAAAALAAsAAAAIAAAAAAALAAwAAAAQAAAAAAALAA0AAAAFAAAAAAALAA4AAAAIAAAAAAALAA8AAAAIAAAAAAALABAAAAAIAAAAAAAMAAIAAAAIAAAAAAAMAAMAAAAIAAAAAAAMAAQAAAAIAAAAAAAMAAUAAAAIAAAAAAAMAAYAAAAIAAAAAAAMAAcAAAAIAAAAAAAMAAgAAAAIAAAAAAAMAAkAAAAIAAAAAAAMAAoAAAAIAAAAAAAMAAsAAAAIAAAAAAAMAAwAAAAIAAAAAAAMAA0AAAAFAAAAAAAMAA4AAAAIAAAAAAAMAA8AAAAIAAAAAAAMABAAAAAIAAAAAAANAAIAAAAIAAAAAAANAAMAAAAIAAAAAAANAAQAAAAIAAAAAAANAAUAAAAIAAAAAAANAAYAAAAIAAAAAAANAAcAAAAIAAAAAAANAAgAAAAIAAAAAAANAAkAAAAIAAAAAAANAAoAAAAIAAAAAAANAAsAAAAIAAAAAAANAAwAAAAIAAAAAAANAA0AAAAFAAAAAAANAA4AAAAIAAAAAAANAA8AAAAIAAAAAAANABAAAAAIAAAAAAAOAAIAAAAIAAAAAAAOAAMAAAAIAAAAAAAOAAQAAAAIAAAAAAAOAAUAAAAIAAAAAAAOAAYAAAAIAAAAAAAOAAcAAAAIAAAAAAAOAAgAAAAIAAAAAAAOAAkAAAAIAAAAAAAOAAoAAAAIAAAAAAAOAAsAAAAIAAAAAAAOAAwAAAAIAAAAAAAOAA0AAAAFAAAAAAAOAA4AAAAIAAAAAAAOAA8AAAAIAAAAAAAOABAAAAAIAAAAAAAPAAIAAAAIAAAAAAAPAAMAAAAIAAAAAAAPAAQAAAAIAAAAAAAPAAUAAAAIAAAAAAAPAAYAAAAIAAAAAAAPAAcAAAAIAAAAAAAPAAgAAAAIAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAGAAAAAAAPAAsAAAAGAAAAAAAPAAwAAAAGAAAAAAAPAA0AAAACAAAAAAAPAA4AAAAIAAAAAAAPAA8AAAAIAAAAAAAPABAAAAAIAAAAAAAQAAIAAAAIAAAAAAAQAAMAAAAIAAAAAAAQAAQAAAAIAAAAAAAQAAUAAAAIAAAAAAAQAAYAAAAIAAAAAAAQAAcAAAAIAAAAAAAQAAgAAAAIAAAAAAAQAAkAAAAFAAAAAAAQAAoAAAAIAAAAAAAQAAsAAAAIAAAAAAAQAAwAAAAIAAAAAAAQAA0AAAAIAAAAAAAQAA4AAAAIAAAAAAAQAA8AAAAIAAAAAAAQABAAAAAIAAAAAAARAAIAAAAIAAAAAAARAAMAAAAIAAAAAAARAAQAAAAIAAAAAAARAAUAAAAIAAAAAAARAAYAAAAIAAAAAAARAAcAAAAIAAAAAAARAAgAAAAIAAAAAAARAAkAAAAFAAAAAAARAAoAAAAIAAAAAAARAAsAAAAIAAAAAAARAAwAAAAIAAAAAAARAA0AAAAIAAAAAAARAA4AAAAIAAAAAAARAA8AAAAIAAAAAAARABAAAAAIAAAAAAASAAIAAAAIAAAAAAASAAMAAAAIAAAAAAASAAQAAAAIAAAAAAASAAUAAAAIAAAAAAASAAYAAAAIAAAAAAASAAcAAAAIAAAAAAASAAgAAAAIAAAAAAASAAkAAAAFAAAAAAASAAoAAAAIAAAAAAASAAsAAAAIAAAAAAASAAwAAAAIAAAAAAASAA0AAAAIAAAAAAASAA4AAAAIAAAAAAASAA8AAAAIAAAAAAASABAAAAAIAAAAAAATAAIAAAAIAAAAAAATAAMAAAAIAAAAAAATAAQAAAAIAAAAAAATAAUAAAAIAAAAAAATAAYAAAAIAAAAAAATAAcAAAAIAAAAAAATAAgAAAAIAAAAAAATAAkAAAAFAAAAAAATAAoAAAAIAAAAAAATAAsAAAAIAAAAAAATAAwAAAAIAAAAAAATAA0AAAAIAAAAAAATAA4AAAAIAAAAAAATAA8AAAAIAAAAAAATABAAAAAIAAAAAAAUAAIAAAAIAAAAAAAUAAMAAAAIAAAAAAAUAAQAAAAIAAAAAAAUAAUAAAAIAAAAAAAUAAYAAAAIAAAAAAAUAAcAAAAIAAAAAAAUAAgAAAAIAAAAAAAUAAkAAAAFAAAAAAAUAAoAAAAIAAAAAAAUAAsAAAAIAAAAAAAUAAwAAAAIAAAAAAAUAA0AAAAIAAAAAAAUAA4AAAAIAAAAAAAUAA8AAAAIAAAAAAAUABAAAAAIAAAAAAAVAAIAAAAIAAAAAAAVAAMAAAAIAAAAAAAVAAQAAAAIAAAAAAAVAAUAAAAIAAAAAAAVAAYAAAAIAAAAAAAVAAcAAAAIAAAAAAAVAAgAAAAIAAAAAAAVAAkAAAAFAAAAAAAVAAoAAAAIAAAAAAAVAAsAAAAIAAAAAAAVAAwAAAAIAAAAAAAVAA0AAAAIAAAAAAAVAA4AAAAIAAAAAAAVAA8AAAAIAAAAAAAVABAAAAAIAAAAAAAWAAIAAAAIAAAAAAAWAAMAAAAIAAAAAAAWAAQAAAAIAAAAAAAWAAUAAAAIAAAAAAAWAAYAAAAIAAAAAAAWAAcAAAAIAAAAAAAWAAgAAAAIAAAAAAAWAAkAAAAFAAAAAAAWAAoAAAAIAAAAAAAWAAsAAAAIAAAAAAAWAAwAAAAIAAAAAAAWAA0AAAAIAAAAAAAWAA4AAAAIAAAAAAAWAA8AAAAIAAAAAAAWABAAAAAIAAAAAAAXAAIAAAAIAAAAAAAXAAMAAAAIAAAAAAAXAAQAAAAIAAAAAAAXAAUAAAAIAAAAAAAXAAYAAAAIAAAAAAAXAAcAAAAIAAAAAAAXAAgAAAAIAAAAAAAXAAkAAAAFAAAAAAAXAAoAAAAIAAAAAAAXAAsAAAAIAAAAAAAXAAwAAAAIAAAAAAAXAA0AAAAIAAAAAAAXAA4AAAAIAAAAAAAXAA8AAAAIAAAAAAAXABAAAAAIAAAAAAAYAAIAAAAIAAAAAAAYAAMAAAAIAAAAAAAYAAQAAAAIAAAAAAAYAAUAAAAIAAAAAAAYAAYAAAAIAAAAAAAYAAcAAAAIAAAAAAAYAAgAAAAIAAAAAAAYAAkAAAAFAAAAAAAYAAoAAAAIAAAAAAAYAAsAAAAIAAAAAAAYAAwAAAAIAAAAAAAYAA0AAAAIAAAAAAAYAA4AAAAIAAAAAAAYAA8AAAAIAAAAAAAYABAAAAAIAAAAAAAZAAIAAAAIAAAAAAAZAAMAAAAIAAAAAAAZAAQAAAAIAAAAAAAZAAUAAAAIAAAAAAAZAAYAAAAIAAAAAAAZAAcAAAAIAAAAAAAZAAgAAAAIAAAAAAAZAAkAAAAFAAAAAAAZAAoAAAAIAAAAAAAZAAsAAAAIAAAAAAAZAAwAAAAIAAAAAAAZAA0AAAAIAAAAAAAZAA4AAAAIAAAAAAAZAA8AAAAIAAAAAAAZABAAAAAIAAAAAAAaAAIAAAAIAAAAAAAaAAMAAAAIAAAAAAAaAAQAAAAIAAAAAAAaAAUAAAAIAAAAAAAaAAYAAAAIAAAAAAAaAAcAAAAIAAAAAAAaAAgAAAAIAAAAAAAaAAkAAAAFAAAAAAAaAAoAAAAIAAAAAAAaAAsAAAAIAAAAAAAaAAwAAAAIAAAAAAAaAA0AAAAIAAAAAAAaAA4AAAAIAAAAAAAaAA8AAAAIAAAAAAAaABAAAAAIAAAAAAAbAAIAAAAIAAAAAAAbAAMAAAAIAAAAAAAbAAQAAAAIAAAAAAAbAAUAAAAIAAAAAAAbAAYAAAAIAAAAAAAbAAcAAAAIAAAAAAAbAAgAAAAIAAAAAAAbAAkAAAAFAAAAAAAbAAoAAAAIAAAAAAAbAAsAAAAIAAAAAAAbAAwAAAAIAAAAAAAbAA0AAAAIAAAAAAAbAA4AAAAIAAAAAAAbAA8AAAAIAAAAAAAbABAAAAAIAAAAAAAcAAIAAAAIAAAAAAAcAAMAAAAIAAAAAAAcAAQAAAAIAAAAAAAcAAUAAAAIAAAAAAAcAAYAAAAIAAAAAAAcAAcAAAAIAAAAAAAcAAgAAAAIAAAAAAAcAAkAAAAFAAAAAAAcAAoAAAAIAAAAAAAcAAsAAAAIAAAAAAAcAAwAAAAIAAAAAAAcAA0AAAAIAAAAAAAcAA4AAAAIAAAAAAAcAA8AAAAIAAAAAAAcABAAAAAIAAAAAAAdAAIAAAAIAAAAAAAdAAMAAAAIAAAAAAAdAAQAAAAIAAAAAAAdAAUAAAAIAAAAAAAdAAYAAAAIAAAAAAAdAAcAAAAIAAAAAAAdAAgAAAAIAAAAAAAdAAkAAAAFAAAAAAAdAAoAAAAIAAAAAAAdAAsAAAAIAAAAAAAdAAwAAAAIAAAAAAAdAA0AAAAIAAAAAAAdAA4AAAAIAAAAAAAdAA8AAAAIAAAAAAAdABAAAAAIAAAAAAAeAAIAAAAAAAAAAAAeAAMAAAAGAAAAAAAeAAQAAAAGAAAAAAAeAAUAAAAGAAAAAAAeAAYAAAAGAAAAAAAeAAcAAAAGAAAAAAAeAAgAAAAGAAAAAAAeAAkAAAAEAAAAAAAeAAoAAAAGAAAAAAAeAAsAAAAGAAAAAAAeAAwAAAAGAAAAAAAeAA0AAAAGAAAAAAAeAA4AAAAGAAAAAAAeAA8AAAAGAAAAAAAeABAAAAABAAAAAAAfAAIAAAAFAAAAAAAfAAMAAAAIAAAAAAAfAAQAAAAIAAAAAAAfAAUAAAAIAAAAAAAfAAYAAAAIAAAAAAAfAAcAAAAIAAAAAAAfAAgAAAAIAAAAAAAfAAkAAAAFAAAAAAAfAAoAAAAIAAAAAAAfAAsAAAAIAAAAAAAfAAwAAAAIAAAAAAAfAA0AAAAIAAAAAAAfAA4AAAAIAAAAAAAfAA8AAAAIAAAAAAAfABAAAAAFAAAAAAAgAAIAAAAFAAAAAAAgAAMAAAAIAAAAAAAgAAQAAAAIAAAAAAAgAAUAAAAIAAAAAAAgAAYAAAAIAAAAAAAgAAcAAAAIAAAAAAAgAAgAAAAIAAAAAAAgAAkAAAAFAAAAAAAgAAoAAAAIAAAAAAAgAAsAAAAIAAAAAAAgAAwAAAAIAAAAAAAgAA0AAAAIAAAAAAAgAA4AAAAIAAAAAAAgAA8AAAAIAAAAAAAgABAAAAAFAAAAAAAhAAIAAAAFAAAAAAAhAAMAAAAIAAAAAAAhAAQAAAAIAAAAAAAhAAUAAAAIAAAAAAAhAAYAAAAIAAAAAAAhAAcAAAAIAAAAAAAhAAgAAAAIAAAAAAAhAAkAAAAFAAAAAAAhAAoAAAAIAAAAAAAhAAsAAAAIAAAAAAAhAAwAAAAIAAAAAAAhAA0AAAAIAAAAAAAhAA4AAAAIAAAAAAAhAA8AAAAIAAAAAAAhABAAAAAFAAAAAAAiAAIAAAAFAAAAAAAiAAMAAAAIAAAAAAAiAAQAAAAIAAAAAAAiAAUAAAAIAAAAAAAiAAYAAAAIAAAAAAAiAAcAAAAIAAAAAAAiAAgAAAAIAAAAAAAiAAkAAAAFAAAAAAAiAAoAAAAIAAAAAAAiAAsAAAAIAAAAAAAiAAwAAAAIAAAAAAAiAA0AAAAIAAAAAAAiAA4AAAAIAAAAAAAiAA8AAAAIAAAAAAAiABAAAAAFAAAAAAAjAAIAAAAFAAAAAAAjAAMAAAAIAAAAAAAjAAQAAAAIAAAAAAAjAAUAAAAIAAAAAAAjAAYAAAAIAAAAAAAjAAcAAAAIAAAAAAAjAAgAAAAIAAAAAAAjAAkAAAAFAAAAAAAjAAoAAAAIAAAAAAAjAAsAAAAIAAAAAAAjAAwAAAAIAAAAAAAjAA0AAAAIAAAAAAAjAA4AAAAIAAAAAAAjAA8AAAAIAAAAAAAjABAAAAAFAAAAAAAkAAIAAAAFAAAAAAAkAAMAAAAIAAAAAAAkAAQAAAAIAAAAAAAkAAUAAAAIAAAAAAAkAAYAAAAIAAAAAAAkAAcAAAAIAAAAAAAkAAgAAAAIAAAAAAAkAAkAAAAFAAAAAAAkAAoAAAAIAAAAAAAkAAsAAAAIAAAAAAAkAAwAAAAIAAAAAAAkAA0AAAAIAAAAAAAkAA4AAAAIAAAAAAAkAA8AAAAIAAAAAAAkABAAAAAFAAAAAAAlAAIAAAAFAAAAAAAlAAMAAAAIAAAAAAAlAAQAAAAIAAAAAAAlAAUAAAAIAAAAAAAlAAYAAAAIAAAAAAAlAAcAAAAIAAAAAAAlAAgAAAAIAAAAAAAlAAkAAAAFAAAAAAAlAAoAAAAIAAAAAAAlAAsAAAAIAAAAAAAlAAwAAAAIAAAAAAAlAA0AAAAIAAAAAAAlAA4AAAAIAAAAAAAlAA8AAAAIAAAAAAAlABAAAAAFAAAAAAAmAAIAAAAFAAAAAAAmAAMAAAAIAAAAAAAmAAQAAAAIAAAAAAAmAAUAAAAIAAAAAAAmAAYAAAAIAAAAAAAmAAcAAAAIAAAAAAAmAAgAAAAIAAAAAAAmAAkAAAAFAAAAAAAmAAoAAAAIAAAAAAAmAAsAAAAIAAAAAAAmAAwAAAAIAAAAAAAmAA0AAAAIAAAAAAAmAA4AAAAIAAAAAAAmAA8AAAAIAAAAAAAmABAAAAAFAAAAAAAnAAIAAAAFAAAAAAAnAAMAAAAIAAAAAAAnAAQAAAAIAAAAAAAnAAUAAAAIAAAAAAAnAAYAAAAIAAAAAAAnAAcAAAAIAAAAAAAnAAgAAAAIAAAAAAAnAAkAAAAFAAAAAAAnAAoAAAAIAAAAAAAnAAsAAAAIAAAAAAAnAAwAAAAIAAAAAAAnAA0AAAAIAAAAAAAnAA4AAAAIAAAAAAAnAA8AAAAIAAAAAAAnABAAAAAFAAAAAAAAABEAAAAIAAAAAAABABEAAAAIAAAAAAACABEAAAAIAAAAAAADABEAAAAIAAAAAAAEABEAAAAIAAAAAAAFABEAAAAIAAAAAAAGABEAAAAIAAAAAAAHABEAAAAIAAAAAAAIABEAAAAIAAAAAAAJABEAAAAIAAAAAAAKABEAAAAIAAAAAAALABEAAAAIAAAAAAAMABEAAAAIAAAAAAANABEAAAAIAAAAAAAOABEAAAAIAAAAAAAPABEAAAAIAAAAAAAQABEAAAAIAAAAAAARABEAAAAIAAAAAAASABEAAAAIAAAAAAATABEAAAAIAAAAAAAUABEAAAAIAAAAAAAVABEAAAAIAAAAAAAWABEAAAAIAAAAAAAXABEAAAAIAAAAAAAYABEAAAAIAAAAAAAZABEAAAAIAAAAAAAaABEAAAAIAAAAAAAbABEAAAAIAAAAAAAcABEAAAAIAAAAAAAdABEAAAAIAAAAAAAeABEAAAAIAAAAAAAfABEAAAAIAAAAAAAgABEAAAAIAAAAAAAhABEAAAAIAAAAAAAiABEAAAAIAAAAAAAjABEAAAAIAAAAAAAkABEAAAAIAAAAAAAlABEAAAAIAAAAAAAmABEAAAAIAAAAAAAnABEAAAAIAAAAAAA=")
tile_set = ExtResource("3_hve3p")

[node name="StoatPath" type="Path2D" parent="."]
scale = Vector2(1.005, 1)
curve = SubResource("Curve2D_feb5d")

[node name="CatPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_fc0e3")

[node name="DogPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7jktm")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
